[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/Inventory UI/chest slots.png" type="Texture" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Tool cabinet/Tool cabinet.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/Inventory UI/slot locked.png" type="Texture" id=4]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/ChestSlots.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Images/Misc/Buttons/ok button.png" type="Texture" id=7]
[ext_resource path="res://Assets/Themes/options.tres" type="Theme" id=8]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=10]

[node name="Tool cabinet" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 3 )

[node name="Trash" parent="." instance=ExtResource( 1 )]
margin_left = 1.0
margin_top = -300.0
margin_right = 55.0
margin_bottom = -300.0

[node name="ItemDescription" parent="." instance=ExtResource( 9 )]
visible = false

[node name="ChestSlotsImg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -377.0
margin_top = -257.0
margin_right = 316.0
margin_bottom = 268.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="InventorySlots" parent="." instance=ExtResource( 10 )]
margin_left = -284.0
margin_top = 123.0
margin_right = 283.0
margin_bottom = 177.0

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 5 )]
margin_left = -284.0
margin_top = 54.0
margin_right = 283.0
margin_bottom = 108.0

[node name="ChestSlots" parent="." instance=ExtResource( 6 )]

[node name="LockedSlots" type="GridContainer" parent="."]
margin_left = -284.0
margin_top = 181.0
margin_right = 283.0
margin_bottom = 235.0
custom_constants/vseparation = 6
custom_constants/hseparation = 3
columns = 10

[node name="locked1" type="TextureRect" parent="LockedSlots"]
margin_right = 54.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked2" type="TextureRect" parent="LockedSlots"]
margin_left = 57.0
margin_right = 111.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked3" type="TextureRect" parent="LockedSlots"]
margin_left = 114.0
margin_right = 168.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked4" type="TextureRect" parent="LockedSlots"]
margin_left = 171.0
margin_right = 225.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked5" type="TextureRect" parent="LockedSlots"]
margin_left = 228.0
margin_right = 282.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked6" type="TextureRect" parent="LockedSlots"]
margin_left = 285.0
margin_right = 339.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked7" type="TextureRect" parent="LockedSlots"]
margin_left = 342.0
margin_right = 396.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked8" type="TextureRect" parent="LockedSlots"]
margin_left = 399.0
margin_right = 453.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked9" type="TextureRect" parent="LockedSlots"]
margin_left = 456.0
margin_right = 510.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="locked10" type="TextureRect" parent="LockedSlots"]
margin_left = 513.0
margin_right = 567.0
margin_bottom = 54.0
texture = ExtResource( 4 )

[node name="OkButton" type="Control" parent="."]
margin_left = -30.0
margin_top = -257.0
margin_right = -30.0
margin_bottom = -257.0

[node name="btn" type="TextureButton" parent="OkButton"]
margin_left = 377.0
margin_top = 430.0
margin_right = 449.0
margin_bottom = 502.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )

[node name="label" type="Label" parent="OkButton"]
modulate = Color( 0.00392157, 1, 0, 1 )
margin_left = 385.0
margin_top = 437.0
margin_right = 439.0
margin_bottom = 498.0
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 8 )
text = "OK"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="OkButton/btn" to="." method="_on_btn_pressed"]
